[win32] Use a DIB when cloning a surface for a WIN32_PRINTING dest

In some cases we were creating a 1bpp temporary surface, losing all
color/grayscale data while printing.

Ref: https://bugzilla.mozilla.org/show_bug.cgi?id=399388